fix: remove click to load for social images (also wrap)

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -58,6 +58,7 @@ h2.main__title{
 .social_links {
   padding: 20px 0;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .social_links__item {
